// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Color/ColorPickerPopover interactive 1`] = `
<div>
  <div
    className="euiPopover emotion-euiPopover"
    id="color-picker-popover"
  >
    <div
      className="euiPopover__anchor css-16vtueo-render"
    >
      <button
        aria-label="Color Picker black"
        className="euiLink emotion-euiLink-primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={Object {}}
          />
        </div>
      </button>
    </div>
  </div>
  <p
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <label>
      <input
        aria-checked={true}
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
        
      <span>
        Show Buttons?
      </span>
    </label>
  </p>
</div>
`;

exports[`Storyshots components/Color/ColorPickerPopover six colors 1`] = `
<div
  className="euiPopover emotion-euiPopover"
  id="color-picker-popover"
>
  <div
    className="euiPopover__anchor css-16vtueo-render"
  >
    <button
      aria-label="Color Picker white"
      className="euiLink emotion-euiLink-primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots components/Color/ColorPickerPopover six colors, value missing 1`] = `
<div
  className="euiPopover emotion-euiPopover"
  id="color-picker-popover"
>
  <div
    className="euiPopover__anchor css-16vtueo-render"
  >
    <button
      aria-label="Color Picker #a1b2c3"
      className="euiLink emotion-euiLink-primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#a1b2c3",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots components/Color/ColorPickerPopover three colors 1`] = `
<div
  className="euiPopover emotion-euiPopover"
  id="color-picker-popover"
>
  <div
    className="euiPopover__anchor css-16vtueo-render"
  >
    <button
      aria-label="Color Picker white"
      className="euiLink emotion-euiLink-primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;
